# badguy

./: .gitignore  cli.py  compose.yml  pyproject.toml
badguy/: commands.py  db.py  dingtalk.py  jiushi.py  schemas.py
scripts/: 002-notifications.sql  create-tables.sql
