[tool.poetry]
name = "badguy"
version = "0.1.0"
description = ""
authors = ["ShiWei <shiwei@leyantech.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.32.2"
click = "^8.1.7"
tomli = "^2.0.1"
arrow = "^1.3.0"
psycopg = {extras = ["binary"], version = "^3.1.19"}
pydantic = "^2.7.1"
pydantic-settings = "^2.2.1"
tqdm = "^4.66.4"


[tool.poetry.group.dev.dependencies]
ruff = "^0.4.5"
pgcli = "^4.1.0"


[[tool.poetry.source]]
name = "tuna"
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
priority = "primary"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
